feat: wrap up frontend changes and perf
