# api/v1/server/run/run.go
@@ -250,10 +250,14 @@ func (t *APIServer) registerSpec(g *echo.Group, spec *openapi3.T) (*populator.Po
 	})
 
 	populatorMW.RegisterGetter("step-run", func(config *server.ServerConfig, parentId, id string) (result interface{}, uniqueParentId string, err error) {
-		stepRun, err := config.APIRepository.StepRun().GetStepRunById(parentId, id)
+		stepRun, err := config.APIRepository.StepRun().GetStepRunById(id)
 
 		if err != nil {
 			return nil, "", err
+		}
+
+		if parentId != "" && sqlchelpers.UUIDToStr(stepRun.TenantId) != parentId {
+			return nil, "", fmt.Errorf("tenant id mismatch when populating step run")
 		}
 
 		return stepRun, sqlchelpers.UUIDToStr(stepRun.TenantId), nil
